L5-policies/egress/02-allowfrontback.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-out-policy
  namespace: front-end
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      ports:
        - protocol: UDP
          port: 53
    - to:
      - namespaceSelector:
          matchLabels:
            tier: back
      ports:
        - protocol: TCP
          port: 9000

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-out-policy
  namespace: back-end
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      ports:
        - protocol: UDP
          port: 53
