L5-policies/egress/03-allowdb.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-out-policy
  namespace: back-end
spec:
  podSelector:
    matchLabels:
      run: dbsvc
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 172.16.0.0/16
      ports:
        - protocol: TCP
          port: 3306
