L5-policies/egress/04-allowext.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ext-out-policy
  namespace: back-end
spec:
  podSelector:
    matchLabels:
      run: extsvc
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 172.217.0.0/16
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
